--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -667,9 +667,6 @@ FilePasswordDialog.setPassword.warning=<html><b>WARNING:</b><br>If you lose this
 FilePasswordDialog.openFile.question=<html>This file is password protected.<br>Enter the password to access it:</html>
 FilePasswordDialog.openFile.badPassword.question=<html>The password you entered is wrong.<br>Enter the password below:</html>
 FilePasswordDialog.openFile.tooltip=Enter the password here.
-
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
 FilePasswordDialog.confirm=Password confirmation
 FilePasswordDialog.confirm.tooltip=Retype the password here
 FilePasswordDialog.confirmIsNotOk=Passwords do not match
@@ -682,3 +679,11 @@ StatementView.notChecked=Not checked
 StatementView.startBalance=Balance at the beginning of the period: {0}
 StatementView.endBalance=Balance at the end of the period: {0}
 StatementView.statementSummary={0} transactions. Total expenses: {1}. Total receipts: {2}
+
+#---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
+CustomFilterPanel.nature=Nature
+CustomFilterPanel.expenses=Expenses
+CustomFilterPanel.expenses.toolTip=Check this box to select expenses
+CustomFilterPanel.receipts=Receipts
+CustomFilterPanel.receipts.toolTip=Check this box to select receipts
