--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -687,3 +687,5 @@ CustomFilterPanel.expenses=Expenses
 CustomFilterPanel.expenses.toolTip=Check this box to select expenses
 CustomFilterPanel.receipts=Receipts
 CustomFilterPanel.receipts.toolTip=Check this box to select receipts
+CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes 
+CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and "{1}" boxes 
