--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -682,7 +682,7 @@ StatementView.statementSummary={0} transactions. Total expenses: {1}. Total rece
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
-CustomFilterPanel.nature=Nature
+CustomFilterPanel.nature=Kind
 CustomFilterPanel.expenses.toolTip=Check this box to select expenses
 CustomFilterPanel.receipts.toolTip=Check this box to select receipts
 CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes 
