--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -685,5 +685,8 @@ StatementView.statementSummary={0} transactions. Total expenses: {1}. Total rece
 CustomFilterPanel.nature=Kind
 CustomFilterPanel.expenses.toolTip=Check this box to select expenses
 CustomFilterPanel.receipts.toolTip=Check this box to select receipts
-CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes 
-CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and "{1}" boxes 
+CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes
+CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and "{1}" boxes
+
+MainMenu.help=Help
+MainMenu.help.tooltip=Opens help page for Yapbam
