--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -334,7 +334,7 @@ PreferencesDialog.Localization.customCountry=Custom
 PreferencesDialog.Localization.customCountry.tooTip=Click on this or select the country from the following list to choose a country different from your system's default country
 PreferencesDialog.Localization.defaultCountry=Default ({0})
 PreferencesDialog.Localization.defaultCountry.toolTip=Select this to use your system's default country ({0})
-PreferencesDialog.Localization.defaultLanguage=System's language (English if this language is not available in Yapbam)
+PreferencesDialog.Localization.defaultLanguage=<html>System's language<br>(English if this language is not available in Yapbam)</html>
 PreferencesDialog.Localization.defaultLanguage.toolTip=Choose this to use your system's default language (or English if this language not available in Yapbam)
 PreferencesDialog.Localization.language=Language
 PreferencesDialog.Localization.revert=Reset
