--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -355,10 +355,10 @@ PreferencesDialog.AutoUpdate.toolTip=This tab allows you to configure the search
 
 PreferencesDialog.LookAndFeel.title=Appearance
 PreferencesDialog.LookAndFeel.toolTip=This tab allows you to configure Yapbam's appearance
-PreferencesDialog.LookAndFeel.java=System-independent appearance
-PreferencesDialog.LookAndFeel.java.toolTip=Click this button to have Yapbam use a system-independent appearance
-PreferencesDialog.LookAndFeel.platform=Default system appearance
-PreferencesDialog.LookAndFeel.platform.toolTip=Click to have Yapbam use system's default appearance
+#PreferencesDialog.LookAndFeel.java=System-independent appearance
+#PreferencesDialog.LookAndFeel.java.toolTip=Click this button to have Yapbam use a system-independent appearance
+#PreferencesDialog.LookAndFeel.platform=Default system appearance
+#PreferencesDialog.LookAndFeel.platform.toolTip=Click to have Yapbam use system's default appearance
 
 PreferencesDialog.Network.title=Network
 PreferencesDialog.Network.toolTip=This tab allows you to set how Yapbam connects to the Internet
@@ -690,3 +690,7 @@ CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and 
 
 MainMenu.help=Help
 MainMenu.help.tooltip=Opens help page for Yapbam
+
+Welcome.menuTitle=Welcome screen
+Welcome.MenuToolTip=<html>Opens Yapbam welcome dialog.<br>This dialog provides useful shortcuts and some tips.</html>
+
