--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -694,3 +694,10 @@ MainMenu.help.tooltip=Opens help page for Yapbam
 Welcome.menuTitle=Welcome screen
 Welcome.MenuToolTip=<html>Opens Yapbam welcome dialog.<br>This dialog provides useful shortcuts and some tips.</html>
 
+Tip.1=<html>L''apparence de Yapbam peut être paramétrée dans les préférences.<hr style="width:40%">Pour la modifier, sélectionnez <b>{1}</b> dans le menu <b>{0}</b>, puis rendez vous dans l''onglet <b>{2}</b></html>
+Tip.2=<html>Seuil d'alerte sur le solde</html>
+Tip.3=<html>Opération périodique</html>
+Tip.4=<html>Pointage, clic droit, création d'opération périodique</html>
+Tip.5=<html>L''onglet <b>{0}</b> permet d''effectuer de nombreuses modifications :<UL><li>Editer, créer, supprimer les opérations périodiques</li><li>Renommer les comptes, en modifier les soldes initiaux, les seuils d'alerte, les modes de paiement. Gérer les chéquiers</li><li>Renommer les catégories</li><li>etc...</li></ul></html>
+Tip.6=<html>Raccourcis clavier pour la saisie des dates et des entiers (exemple:)</html>
+
