--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -693,6 +693,20 @@ MainMenu.help.tooltip=Opens help page for Yapbam
 
 Welcome.menuTitle=Welcome screen
 Welcome.MenuToolTip=<html>Opens Yapbam welcome dialog.<br>This dialog provides useful shortcuts and some tips.</html>
+Welcome.introduction=<html>Welcome to <b>Yapbam</b></html>
+Welcome.showAtStartup=Show at startup
+Welcome.showAtStartup.tooltip=Check this box to show this dialog at every yapbam startup
+Welcome.shorcuts.title=Useful shortcuts
+Welcome.sampleData=Open sample data file
+Welcome.sampleData.tooltip=Click here to open a sample file
+Welcome.tutorial=<html>View the tutorial<BR>(Internet connection needed)</html>
+Welcome.tutorial.tooltip=Click here to open the tutorial web page
+Welcome.tip.title=Tip of the day 
+Welcome.firstTip.tooltip=Displays the first tip
+Welcome.previousTip.tooltip=Displays the previous tip
+Welcome.tipNumber.tooltip=Type a tip number here to display it
+Welcome.nextTip.tooltip=Displays next tip
+Welcome.lastTip.tooltip=Displays last tip
 
 Tip.1=<html>L''apparence de Yapbam peut être paramétrée dans les préférences.<hr style="width:40%">Pour la modifier, sélectionnez <b>{1}</b> dans le menu <b>{0}</b>, puis rendez vous dans l''onglet <b>{2}</b></html>
 Tip.2=<html>Seuil d'alerte sur le solde</html>
@@ -700,4 +714,3 @@ Tip.3=<html>Opération périodique</html>
 Tip.4=<html>Pointage, clic droit, création d'opération périodique</html>
 Tip.5=<html>L''onglet <b>{0}</b> permet d''effectuer de nombreuses modifications :<UL><li>Editer, créer, supprimer les opérations périodiques</li><li>Renommer les comptes, en modifier les soldes initiaux, les seuils d'alerte, les modes de paiement. Gérer les chéquiers</li><li>Renommer les catégories</li><li>etc...</li></ul></html>
 Tip.6=<html>Raccourcis clavier pour la saisie des dates et des entiers (exemple:)</html>
-
