--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -258,6 +258,7 @@ GenericButton.duplicate=Duplicate
 GenericButton.yes=Yes
 GenericButton.no=No
 GenericButton.ignore=Ignore
+GenericButton.continue=Continue
 
 Transaction.0=S/T
 Transaction.account=Account
@@ -649,7 +650,6 @@ saveDialog.FileExist.message=File already exists. Would you like to overwrite it
 
 # When an imported file contains erroneous lines, a report is displayed
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines could not be parsed and will be ignored.</html>
-GenericButton.continue=Continue
 ImportDialog.errorMessage.continue.tooltip=Import will continue ignoring the lines having errors
 ImportDialog.errorMessage.cancel.tooltip=Abandons the import
 
@@ -691,6 +691,22 @@ CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and 
 MainMenu.help=Help
 MainMenu.help.tooltip=Opens help page for Yapbam
 
+GenericCheckBox.rememberDecision=Remember my decision
+GenericCheckBox.rememberDecision.tooltip=<html>Check this box to have Yapbam remember your decision and not ask you again<br>(you could always change your mind using the Preferences dialog).</html>
+
+ErrorManager.sendReport.message=<html><h1>Sorry, an error occured.</h1>Would you accept to send an error report to the Yapbam team ?<br>It would greatly help us to improve the quality of this sofware.
+ErrorManager.report.dontSend.tootip=Closes the dialog without send the error report
+ErrorManager.report.send.tootip=Closes the dialog and send the error report
+ErrorManager.preferences.title=Error reports
+ErrorManager.preferences.tooltip=This tab allows you to configure error report sending when Yapbam encounters errors.
+ErrorManager.preferences.introduction=You can help us improving the quality of this software by allowing Yapbam to send error reports when a problem occurs. 
+ErrorManager.preferences.sendWithoutAsking=Send without asking
+ErrorManager.preferences.sendWithoutAsking.tooltip=Select this option to always send reports without asking.
+ErrorManager.preferences.neverSendNorAsking=Do send, and stop asking me !
+ErrorManager.preferences.neverSendNorAsking.tooltip=Select this option to prevent Yapbam sending reports nor asking you again.
+ErrorManager.preferences.alwaysAsk=Always ask me
+ErrorManager.preferences.alwaysAsk.tooltip=Select this option to have Yapbam asking you every time there a problem.
+
 Welcome.menuTitle=Welcome screen
 Welcome.MenuToolTip=<html>Opens Yapbam welcome dialog.<br>This dialog provides useful shortcuts and some tips.</html>
 Welcome.introduction=<html>Welcome to <b>Yapbam</b></html>
@@ -698,9 +714,9 @@ Welcome.showAtStartup=Show at startup
 Welcome.showAtStartup.tooltip=Check this box to show this dialog at every yapbam startup
 Welcome.shorcuts.title=Useful shortcuts
 Welcome.sampleData=Open sample data file
-Welcome.sampleData.tooltip=Click here to open a sample file
+Welcome.sampleData.tooltip=Opens a sample file
 Welcome.tutorial=<html>View the tutorial<BR>(Internet connection needed)</html>
-Welcome.tutorial.tooltip=Click here to open the tutorial web page
+Welcome.tutorial.tooltip=Opens the tutorial web page
 Welcome.tip.title=Tip of the day 
 Welcome.firstTip.tooltip=Displays the first tip
 Welcome.previousTip.tooltip=Displays the previous tip
@@ -714,3 +730,4 @@ Tip.3=<html>Vos opérations courantes peuvent être générées automatiquement.<hr s
 Tip.4=<html>Pensez à utiliser le clic droit.<hr style="width:40%">Un clic-droit sur une opération permet de la modifier, la dupliquer ou la supprimer rapidement.</html>
 Tip.5=<html>L''onglet <b>{0}</b> permet d''effectuer de nombreuses modifications :<hr style="width:40%">- Editer, créer, supprimer les opérations périodiques.<br>- Renommer les comptes, en modifier les soldes initiaux, les seuils d'alerte, les modes de paiement. Gérer les chéquiers<br>- Renommer les catégories<br>etc...</li></ul></html>
 Tip.6=<html>Vous pouvez accélérez vos saisies grâce aux raccourcis clavier.<hr style="width:40%">Lorsque vous éditez une date, la <b>flèche haute</b> passe au lendemain, la <b>flèche basse</b> passe à la veille.<br>De même, pour les saisies de nombres (par exemple, le nombre de chèques dans un chéquier), ces flèches augmentent ou diminuent d'une unité.</html>
+
