--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -699,7 +699,7 @@ ErrorManager.report.dontSend.tootip=Closes the dialog without send the error rep
 ErrorManager.report.send.tootip=Closes the dialog and send the error report
 ErrorManager.preferences.title=Error reports
 ErrorManager.preferences.tooltip=This tab allows you to configure error report sending when Yapbam encounters errors.
-ErrorManager.preferences.introduction=You can help us improving the quality of this software by allowing Yapbam to send error reports when a problem occurs. 
+ErrorManager.preferences.introduction=<html>You can help us improving the quality of this software !<br>Please allow Yapbam to send error reports when a problem occurs.</html> 
 ErrorManager.preferences.sendWithoutAsking=Send without asking
 ErrorManager.preferences.sendWithoutAsking.tooltip=Select this option to always send reports without asking.
 ErrorManager.preferences.neverSendNorAsking=Do send, and stop asking me !
