--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -682,18 +682,23 @@ StatementView.statementSummary={0} transactions. Total expenses: {1}. Total rece
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
+
+#-------- custom filter part --------
+#See CustomFilter.png
 CustomFilterPanel.nature=Kind
 CustomFilterPanel.expenses.toolTip=Check this box to select expenses
 CustomFilterPanel.receipts.toolTip=Check this box to select receipts
 CustomFilterPanel.error.checkStatus=Please check at least one of the "{0}" and "{1}" boxes
 CustomFilterPanel.error.natureStatus=Please check at least one of the "{0}" and "{1}" boxes
+#-------- end of custom filter part --------
 
+#-------- menu "help" part --------
 MainMenu.help=Help
 MainMenu.help.tooltip=Opens help page for Yapbam
+#-------- end of "help" part --------
 
-GenericCheckBox.rememberDecision=Remember my decision
-GenericCheckBox.rememberDecision.tooltip=<html>Check this box to have Yapbam remember your decision and not ask you again<br>(you could always change your mind using the Preferences dialog).</html>
-
+#-------- Error dialog part --------
+#See ReportError.png
 ErrorManager.sendReport.message=<html><h1>Sorry, an error occured.</h1>Would you accept to send an error report to the Yapbam team ?<br>It would greatly help us to improve the quality of this sofware.
 ErrorManager.report.dontSend.tootip=Closes the dialog without send the error report
 ErrorManager.report.send.tootip=Closes the dialog and send the error report
@@ -704,30 +709,67 @@ ErrorManager.preferences.sendWithoutAsking=Send without asking
 ErrorManager.preferences.sendWithoutAsking.tooltip=Select this option to always send reports without asking.
 ErrorManager.preferences.neverSendNorAsking=Do send, and stop asking me !
 ErrorManager.preferences.neverSendNorAsking.tooltip=Select this option to prevent Yapbam sending reports nor asking you again.
-ErrorManager.preferences.alwaysAsk=Always ask me
-ErrorManager.preferences.alwaysAsk.tooltip=Select this option to have Yapbam asking you every time there a problem.
 
+GenericCheckBox.rememberDecision=Remember my decision
+GenericCheckBox.rememberDecision.tooltip=<html>Check this box to have Yapbam remember your decision and not ask you again<br>(you could always change your mind using the Preferences dialog).</html>
+#-------- End of error dialog part --------
+
+#-------- update part --------
+#There are some changes in the Yapbam update process.
+#In previous versions, the user had to download and install manually new version ... which was not very comfortable
+#In this new version, Yapbam will download and install updates by itself.
+#This changes results in some changes in the "check for update" dialog and preference panel.
+
+#Changes to the preference panel
+PreferencesDialog.AutoUpdate.ifAvailable.title=When updates are available
+PreferencesDialog.AutoUpdate.ifAvailable.askMe=Ask me
+PreferencesDialog.AutoUpdate.ifAvailable.autoInstall=Download and install
+
+#This dialog will be displayed when Yapbam need to inform the user that a new version is available
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>What do you like to do ?</BODY></HTML>
+MainMenu.CheckUpdate.installNow=Install now
+MainMenu.CheckUpdate.Success.Detail=Install later
+
+#This dialog is displayed when the user choose to download and install the new version
+Update.Dowloading.title=Downloading
+Update.Downloading.message=Version {0} is downloading.
+
+#This message is displayed at the end of the manual update, when the downloading is finished
+Update.Dowloaded.title=New version downloaded
+Update.Downloading.message=<html>Version {0} has downloaded.<br>You have to restart Yapbam in order to have the new version installed.</html>
+#-------- end of the update part --------
+
+#-------- Welcome screen part --------
+#Yapbam has now a welcome screen that displays some shortcuts and tips
+#Menu that allow to re-open the welcome screen during Yapbam session
 Welcome.menuTitle=Welcome screen
 Welcome.MenuToolTip=<html>Opens Yapbam welcome dialog.<br>This dialog provides useful shortcuts and some tips.</html>
+
+#The welcome screen itself
 Welcome.introduction=<html>Welcome to <b>Yapbam</b></html>
 Welcome.showAtStartup=Show at startup
 Welcome.showAtStartup.tooltip=Check this box to show this dialog at every yapbam startup
+
+#Title of the shortcuts panel
 Welcome.shorcuts.title=Useful shortcuts
 Welcome.sampleData=Open sample data file
 Welcome.sampleData.tooltip=Opens a sample file
 Welcome.tutorial=<html>View the tutorial<BR>(Internet connection needed)</html>
 Welcome.tutorial.tooltip=Opens the tutorial web page
-Welcome.tip.title=Tip of the day 
+
+#Title of the tips panel
+Welcome.tip.title=Tip of the day
+#tooltips of navigation buttons 
 Welcome.firstTip.tooltip=Displays the first tip
 Welcome.previousTip.tooltip=Displays the previous tip
 Welcome.tipNumber.tooltip=Type a tip number here to display it
 Welcome.nextTip.tooltip=Displays next tip
 Welcome.lastTip.tooltip=Displays last tip
-
+#The tips
 Tip.1=<html>L''apparence de Yapbam peut être paramétrée dans les préférences.<hr style="width:40%">Pour la modifier, sélectionnez <b>{1}</b> dans le menu <b>{0}</b>, puis rendez vous dans l''onglet <b>{2}</b></html>
 Tip.2=<html>Vous pouvez définir des seuils d''alerte sur chacun de vos comptes.<hr style="width:40%">Par défaut, une alerte (affichage d''une icône dans le titre de l''onglet <b>{0}</b>) est émise si le solde du compte devient négatif.<br>Vous pouvez changer ce seuil dans l''onglet <b>{1}</b>.<br>Vous pouvez également y définir un seuil d''alerte lorsque le solde dépasse un certain montant.</html>
 Tip.3=<html>Vos opérations courantes peuvent être générées automatiquement.<hr style="width:40%">Pour ce faire, vous pouvez définir des <b>opérations périodiques</b> dans l''onglet <b>{0}</b>.<br>Un moyen encore plus simple est de sélectionner une opération puis <b>{1}</b> dans le menu contextuel (clic-droit sur l'opération).</html>
 Tip.4=<html>Pensez à utiliser le clic droit.<hr style="width:40%">Un clic-droit sur une opération permet de la modifier, la dupliquer ou la supprimer rapidement.</html>
 Tip.5=<html>L''onglet <b>{0}</b> permet d''effectuer de nombreuses modifications :<hr style="width:40%">- Editer, créer, supprimer les opérations périodiques.<br>- Renommer les comptes, en modifier les soldes initiaux, les seuils d'alerte, les modes de paiement. Gérer les chéquiers<br>- Renommer les catégories<br>etc...</li></ul></html>
 Tip.6=<html>Vous pouvez accélérez vos saisies grâce aux raccourcis clavier.<hr style="width:40%">Lorsque vous éditez une date, la <b>flèche haute</b> passe au lendemain, la <b>flèche basse</b> passe à la veille.<br>De même, pour les saisies de nombres (par exemple, le nombre de chèques dans un chéquier), ces flèches augmentent ou diminuent d'une unité.</html>
-
+#-------- end of the welcome screen part --------
