--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -793,3 +793,17 @@ Tip.4=<html>Think of using the right clic !.<hr style="width:40%">A right clic o
 Tip.5=<html>The <b>{0}</b> tab allows you to make a lot of changes:<hr style="width:40%">- Edit, create, suppress periodical transactions.<br>- Rename accounts, change initial balance, alert thresholds, payment modes. Manage check books<br>- Rename categories<br>- etc...</li></ul></html>
 Tip.6=<html>You can speedup your entries with keyboard shortcuts.<hr style="width:40%">When you edit a date, the <b>up arrow</b> goes to next day, la <b>down arrow</b> goes the day before.<br>Similarly, for number entries (for exemple, the number of checks in a checkbook), these arrows increase or decrease the edited number.</html>
 #-------- end of the welcome screen part --------
+
+#-------- Changes in the budget view --------
+#Adds some optional columns and lines to the budget view
+#See budget.png (sums and averages are null, because this functionnality is not yet developped).
+BudgetPanel.averageColumn.checkBox=Average column
+BudgetPanel.averageColumn.checkBox.tooltip=Check this box to add an average column to the table.
+BudgetPanel.sumColumn.checkBox=Sum column
+BudgetPanel.sumColumn.checkBox.tooltip=Check this box to add a sum column to the table.
+BudgetPanel.sumLine.checkBox=Sum line
+BudgetPanel.sumLine.checkBox.tooltip=Check this box to add a sum line to the table.
+BudgetPanel.sum=SUM
+BudgetPanel.average=AVERAGE
+#-------- End of changes in the budget view --------
+  
