--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -740,7 +740,7 @@ Update.Downloading.message=Version {0} is downloading.
 
 #This message is displayed at the end of the manual update, when the downloading is finished
 Update.Dowloaded.title=New version downloaded
-Update.Downloading.message=<html>Version {0} has downloaded.<br>You have to restart Yapbam in order to have the new version installed.</html>
+Update.Downloaded.message=<html>Version {0} has downloaded.<br>You have to restart Yapbam in order to have the new version installed.</html>
 
 #The update process is divided in two parts.
 #First, the updated files are downloaded.
