--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -735,11 +735,11 @@ MainMenu.CheckUpdate.installNow=Install now
 MainMenu.CheckUpdate.cancel=Do nothing
 
 #This dialog is displayed when the user choose to download and install the new version
-Update.Dowloading.title=Downloading ...
+Update.Downloading.title=Downloading ...
 Update.Downloading.message=Version {0} is downloading.
 
 #This message is displayed at the end of the manual update, when the downloading is finished
-Update.Dowloaded.title=New version downloaded
+Update.Downloaded.title=New version downloaded
 Update.Downloaded.message=<html>Version {0} has downloaded.<br>You have to restart Yapbam in order to have the new version installed.</html>
 
 #The update process is divided in two parts.
