--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="srcTests"/>
 	<classpathentry kind="src" path="testSrc"/>
 	<classpathentry kind="src" path="srcLauncher"/>
+	<classpathentry kind="src" path="srcUpdater"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="JCommon"/>
